# netflix

./: .flake8  .gitignore  NetflixViewingHistory.csv  README.md  netflix_selenium.py  noxfile.py  pyproject.toml
example/: main.py
src/netflix_activity/: NetflixViewingHistory.csv  __init__.py  netflix_selenium.py  rated_titles.json  seen_titles.json
tests/: test_netflix_selenium.py
