[tool.poetry]
name = "netflix-activity"
version = "0.1.0"
description = "Download your Netflix activity"
authors = ["Nicolas Vincent"]
license = "GPLv3"
readme = "README.md"
homepage = "https://github.com/NicovincX2/netflix"
repository = "https://github.com/NicovincX2/netflix"
keywords = ["netflix"]

[tool.poetry.dependencies]
python = "^3.7"
selenium = "^3.141.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
netflix-activity = "netflix_activity.netflix_selenium:main"
